# blend

./: .bzrignore  .gitignore  .gitmodules  CMakeLists.txt  license.txt
R/: blend0.R  blend0NC.R  blend0S6.R  blend0SF.R  blend1.R  blend1NC.R  blend1S6.R  blend1SF.R  blend2.R  blend3.R  blend4.R  blendK.R  blendKNC.R  blendKS6.R  blendKSF.R
additional_material/: BLEND_0.5.1_tutorial.html  BLEND_tutorial.html  CCP4_blend.html  blend.exam
additional_material/data/insulin/: in10_MS_1_001.mtz  in11_MS_1_001.mtz  in12_MS_1_001.mtz  in13_MS_1_001.mtz  in15_MS_1_001.mtz  in16_MS_1_001.mtz  in4_MS_1_001.mtz  in5_MS_1_001.mtz  in6_MS_1_001.mtz  in7_MS_1_001.mtz  in9_MS_1_001.mtz
additional_material/data/lysozyme/: dataset_001.mtz  dataset_002.mtz  dataset_003.mtz  dataset_004.mtz  dataset_005.mtz  dataset_006.mtz  dataset_007.mtz  dataset_008.mtz  dataset_009.mtz  dataset_010.mtz  dataset_011.mtz  dataset_012.mtz  dataset_013.mtz  dataset_014.mtz  dataset_015.mtz  dataset_016.mtz  dataset_017.mtz  dataset_018.mtz  dataset_019.mtz  dataset_020.mtz  dataset_021.mtz  dataset_022.mtz  dataset_023.mtz  dataset_024.mtz  dataset_025.mtz  dataset_026.mtz  dataset_027.mtz  dataset_028.mtz
python/: ccp4_classes.py  ccp4_functions.py  create_file_for_BLEND.py  j_baseClasses.py  merge_clusters.py  xds_to_mtz_list.py
src/: CCP4base.cpp  CCP4base.hh  Errors.cpp  Errors.hh  InputAll.cpp  InputAll.hh  InputBase.hh  Makefile  Output.cpp  Output.hh  Preprocessor.cpp  Preprocessor.hh  aux_blend.cpp  aux_blend.hh  average.cpp  average.hh  blend.cpp  cctbx_utils.cpp  cctbx_utils.hh  cellgroup.cpp  cellgroup.hh  centre.cpp  centre.hh  checkcompatiblesymmetry.cpp  checkcompatiblesymmetry.hh  checklatticecentering.cpp  checklatticecentering.hh  checknullbatches.cpp  checknullbatches.hh  choosesolution.cpp  choosesolution.hh  columnlabels.cpp  columnlabels.hh  comparestring.cpp  comparestring.hh  completeness.cpp  completeness.hh  controls.cpp  controls.hh  copymergedmtz.cpp  (+144 more)
